# project-cloud-computing

./: .gitmodules  Docker_Build.txt  docker-compose.yml  taak.txt
CloudComputing/: .env.example  composer.json  dockerfile  package-lock.json  start.sh
CloudComputing/config/: auth.php
CloudComputing/routes/: api.php  auth.php  web.php
GraphqlAgenda/: Dockerfile  dockerfile  go.mod  go.sum  gqlgen.yml  server.go
GraphqlAgenda/Models/: models.go
GraphqlAgenda/db/: db.go
GraphqlAgenda/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
GraphqlAgenda/main/: server.go
GrpcMedData/: .gitignore  Dockerfile  alembic.ini  requirements.txt  server.py
GrpcMedData/database/: db.py  models.py
GrpcMedData/proto/: medicalData.proto  medicalData_pb2.py  medicalData_pb2_grpc.py
MqttBroker/: create_user.sh
MqttBroker/config/: mosquitto.conf
MqttSensors/: CMakeLists.txt  Dockerfile  dockerfile  main.cpp
MqttSensors/include/: mqttClient.h  rng.h
MqttSensors/include/sensors/: bloodPressureSensor.h  humiditySensor.h  oxygenSensor.h  temperatureSensor.h
MqttSensors/src/: mqttClient.cpp  rng.cpp
MqttSensors/src/sensors/: bloodPressureSensor.cpp  humiditySensor.cpp  oxygenSensor.cpp  temperatureSensor.cpp
RestRestaurant/restaurantapi/: Dockerfile  build.gradle  settings.gradle
SoapDotnet/: .gitignore  Dockerfile  Program.cs  SoapDotnet.csproj  SoapDotnet.http  SoapDotnet.sln  dockerfile
SoapDotnet/.cache/: deviceid
SoapDotnet/Migrations/: 20241028205617_InitialCreate.Designer.cs  20241028205617_InitialCreate.cs  20241029174718_CreateMigration.Designer.cs  20241029174718_CreateMigration.cs  20241030180220_Updatedkey.Designer.cs  20241030180220_Updatedkey.cs  20241119130129_database.Designer.cs  20241119130129_database.cs  20241119163539_database.Designer.cs  20241119163539_database.cs  AppDbContextModelSnapshot.cs  UserDbContextModelSnapshot.cs
SoapDotnet/Models/: Address.cs  (+11 more)
WebSockets/: nodemon.json  package-lock.json  package.json  tsconfig.json
laravelWebsite/: Dockerfile  composer.json  dockerfile  package-lock.json  start.sh
postgresDatabase/: Dockerfile  create-multiple-databases.sh  dockerfile  initialize-and-run.sh
(+89 files in other folders)
